--- a/app/assets/css/color.css
+++ b/app/assets/css/color.css
@@ -1,4 +1,8 @@
 @theme {
+  --color-text-100: #333333;
+  --color-text-200: #53555a;
+  --color-text-300: #6b6b6b;
+
   --color-neutral-100: #ffffff;
   --color-neutral-200: #f9fafb;
   --color-neutral-300: #f7f7f7;
@@ -28,5 +32,24 @@
   --color-secondary-700: #1d7eaf;
   --color-secondary-800: #1a729e;
   --color-secondary-900: #17658c;
-  --color-secondary-1000: #14597b;
+
+  --color-red-100: #f76050;
+  --color-red-200: #f64f3c;
+  --color-red-300: #f53d29;
+  --color-red-400: #f42b15;
+  --color-red-500: #ea210b;
+  --color-red-600: #d61f0a;
+  --color-red-700: #c31c09;
+  --color-red-800: #af1908;
+  --color-red-900: #9c1607;
+
+  --color-yellow-100: #fdf749;
+  --color-yellow-200: #fdf635;
+  --color-yellow-300: #fdf521;
+  --color-yellow-400: #f42b15;
+  --color-yellow-500: #fdf50d;
+  --color-yellow-600: #f2ea02;
+  --color-yellow-700: #ded702;
+  --color-yellow-800: #cac302;
+  --color-yellow-900: #b6b002;
 }
