--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
 
+@custom-variant dark (&:is(.dark *));
+
 @import "./color.css";
 @import "./scrollbar.css";
 @import "./typograhpy.css";
