--- a/app/assets/css/typograhpy.css
+++ b/app/assets/css/typograhpy.css
@@ -15,7 +15,7 @@
   :root {
     font-family: var(--font-primary);
     font-size: 16px;
-    color: #333;
+    color: var(--color-text-100);
   }
 
   h1,
